<resources>
    <string name="app_name">Foosball Matches</string>
    <string name="menu_games">Games</string>
    <string name="menu_rankings">Rankings</string>
    <string name="menu_players">Players</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="date">Date</string>
    <string name="score">Score</string>
    <string name="button_update">Update</string>
    <string name="button_add">Add Game</string>
    <string name="button_cancel">Cancel</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="score_divider">-</string>
    <string name="ranking_position">Pos.</string>
    <string name="ranking_player">Player</string>
    <string name="ranking_played">Played</string>
    <string name="ranking_won">Won</string>
    <string name="score_hint">0</string>
    <string name="error_player_name_cant_be_empty">First name and Last name can\'t be empty</string>
</resources>