<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/button_cancel"
            app:layout_constraintEnd_toStartOf="@+id/button_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_score1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_cancel" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_player1_first_name"
            android:layout_width="@dimen/edit_text_player_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="12dp"
            android:hint="@string/hint_first_name"
            android:lines="1"
            app:layout_constraintStart_toEndOf="@+id/label_player1"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_player1_last_name"
            android:layout_width="@dimen/edit_text_player_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="12dp"
            android:hint="@string/hint_last_name"
            android:lines="1"
            app:layout_constraintStart_toEndOf="@+id/edit_text_player1_first_name"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_player2_first_name"
            android:layout_width="@dimen/edit_text_player_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="12dp"
            android:hint="@string/hint_first_name"
            android:lines="1"
            app:layout_constraintStart_toEndOf="@+id/label_player2"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_player1_first_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_player2_last_name"
            android:layout_width="@dimen/edit_text_player_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="12dp"
            android:hint="@string/hint_last_name"
            android:lines="1"
            app:layout_constraintStart_toEndOf="@+id/edit_text_player2_first_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_player1_last_name" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_score1"
            android:layout_width="@dimen/edit_text_score_width"
            android:layout_height="@dimen/edit_text_height"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/edit_text_player2_first_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_player2_first_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_score2"
            android:layout_width="@dimen/edit_text_score_width"
            android:layout_height="@dimen/edit_text_height"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_score1"
            app:layout_constraintStart_toEndOf="@+id/edit_text_score1" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_player1_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_text_player1_first_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_player2_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_text_player2_first_name" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_score1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_text_score1" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>