<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="game"
            type="com.silvestr.foosballmatches.data.Game" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_player1_first_name"
            android:layout_width="@dimen/edit_text_player_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="12dp"
            android:hint="@string/hint_first_name"
            android:lines="1"
            android:text="@{game.player1.firstName}"
            app:layout_constraintStart_toEndOf="@+id/label_player1"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_player1_last_name"
            android:layout_width="@dimen/edit_text_player_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="12dp"
            android:hint="@string/hint_last_name"
            android:lines="1"
            android:text="@{game.player1.lastName}"
            app:layout_constraintStart_toEndOf="@+id/edit_text_player1_first_name"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_player2_first_name"
            android:layout_width="@dimen/edit_text_player_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="12dp"
            android:hint="@string/hint_first_name"
            android:lines="1"
            android:text="@{game.player2.firstName}"
            app:layout_constraintStart_toEndOf="@+id/label_player2"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_player1_first_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_player2_last_name"
            android:layout_width="@dimen/edit_text_player_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="12dp"
            android:hint="@string/hint_last_name"
            android:lines="1"
            android:text="@{game.player2.lastName}"
            app:layout_constraintStart_toEndOf="@+id/edit_text_player2_first_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_player1_last_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_score1"
            android:layout_width="@dimen/edit_text_score_width"
            android:layout_height="@dimen/edit_text_height"
            android:hint="@string/score_hint"
            android:inputType="number"
            android:text="@{String.valueOf(game.score1)}"
            app:layout_constraintStart_toStartOf="@+id/edit_text_player2_first_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_player2_first_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_score2"
            android:layout_width="@dimen/edit_text_score_width"
            android:layout_height="@dimen/edit_text_height"
            android:hint="@string/score_hint"
            android:inputType="number"
            android:text="@{String.valueOf(game.score2)}"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_score1"
            app:layout_constraintStart_toEndOf="@+id/edit_text_score1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            android:textAppearance="@style/TextAppearance.Bold.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_player1_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_text_player1_first_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2"
            android:textAppearance="@style/TextAppearance.Bold.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_player2_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_text_player2_first_name" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textAppearance="@style/TextAppearance.Bold.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_score1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_text_score1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_message"
            style="@style/ErrorTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_score"
            tools:text="Error message"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/button_cancel"
            app:layout_constraintEnd_toStartOf="@+id/button_update"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_score1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_update"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>