<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/position"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_item_ranking_height"
        android:gravity="center"
        android:text="@string/ranking_position"
        android:textAppearance="@style/TextAppearance.Bold.Medium"
        app:layout_constraintBottom_toTopOf="@+id/recycler_rankings"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/player_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_item_ranking_height"
        android:gravity="center|start"
        android:paddingStart="@dimen/list_item_padding"
        android:text="@string/ranking_player"
        android:textAppearance="@style/TextAppearance.Bold.Medium"
        app:layout_constraintBottom_toTopOf="@+id/recycler_rankings"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_40"
        app:layout_constraintStart_toEndOf="@+id/vertical_guideline_10"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/played"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_item_ranking_height"
        android:background="@drawable/bg_ranking"
        android:gravity="center"
        android:text="@string/ranking_played"
        android:textAppearance="@style/TextAppearance.Bold.Medium"
        app:layout_constraintBottom_toTopOf="@+id/recycler_rankings"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_75"
        app:layout_constraintStart_toEndOf="@+id/vertical_guideline_40"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/won"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_item_ranking_height"
        android:background="@drawable/bg_ranking"
        android:gravity="center"
        android:text="@string/ranking_won"
        android:textAppearance="@style/TextAppearance.Bold.Medium"
        app:layout_constraintBottom_toTopOf="@+id/recycler_rankings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vertical_guideline_75"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_rankings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_10"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_40"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_75"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>